--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -66,19 +66,19 @@
 										<span class="config_name text-truncate" title="{{config.name}}">{{config.name}}</span>
 									</ng-template>
 									<div class="action-icons-data">
-										<div class="clone" *ngIf="!editIndexName">
+										<div class="clone" *ngIf="!editIndexName" (click)="$event.stopPropagation();openIndexModalPopup('clone',config);selectIndexConfigDrop.close();" ngbTooltip='Clone' placement="top-center" [container]="'body'">
 											<img src="assets/icons/clone.svg">
 										</div>
-										<div class="edit-black" *ngIf="!editIndexName" (click)="$event.stopPropagation();editIndexConfig(config,'edit')">
+										<div class="edit-black" *ngIf="!editIndexName" (click)="$event.stopPropagation();editIndexConfig(config,'edit')" ngbTooltip='Edit' placement="top-center" [container]="'body'">
 											<img src="assets/icons/edit-pencil.svg">
 										</div>																
-										<div class="delete" *ngIf="!editIndexName">
+										<div class="delete" *ngIf="!editIndexName" ngbTooltip='Delete' placement="top-center" [container]="'body'" (click)="$event.stopPropagation();deleteIndexConfig(config)">
 											<img src="assets/icons/delete.svg">
 										</div>											
 									</div>
 								</li>
 							</perfect-scrollbar>
-							<div class="create-new" (click)="openIndexModalPopup();selectIndexConfigDrop.close();">+ Create New</div>
+							<div class="create-new" (click)="openIndexModalPopup('default');selectIndexConfigDrop.close();">+ Create New</div>
 						</ul>
 					</div>
 				</div>				
@@ -119,7 +119,7 @@
 
 				<div class="search-config-elipse-block default-index-title">
 					<div class="title text-truncate" title="{{configObj[selectedConfig]?configObj[selectedConfig].name:'Loading..'}}">{{configObj[selectedConfig]?configObj[selectedConfig].name:'Loading..'}} </div>
-					<div class="kr-sg-dropdowns" #selectIndexConfigDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-left'">
+					<div class="kr-sg-dropdowns" #selectSearchConfigDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-left'">
 						<div class="dropdown dropdown-open">
 							<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>
 								<img src="assets/icons/sidemenu/overflow.svg">
@@ -136,19 +136,19 @@
 											<span class="config_name text-truncate" title="{{config.name}}">{{config.name}}</span>
 										</ng-template>
 										<div class="action-icons-data">
-											<div class="clone" *ngIf="!editName">
+											<div class="clone" *ngIf="!editName" (click)="$event.stopPropagation();openModalPopup('clone',config);selectSearchConfigDrop.close();" ngbTooltip='Clone' placement="top-center" [container]="'body'">
 												<img src="assets/icons/clone.svg">
 											</div>
-											<div class="edit-black" *ngIf="!editName" (click)="$event.stopPropagation();editConfig(config,'edit')">
+											<div class="edit-black" *ngIf="!editName" (click)="$event.stopPropagation();editConfig(config,'edit')" ngbTooltip='Edit' placement="top-center" [container]="'body'">
 												<img src="assets/icons/edit-pencil.svg">
 											</div>																
-											<div class="delete" *ngIf="!editName">
+											<!-- <div class="delete" *ngIf="!editName">
 												<img src="assets/icons/delete.svg">
-											</div>											
+											</div>											 -->
 										</div>
 									</li>
 								</perfect-scrollbar>
-								<div class="create-new" (click)="openModalPopup();selectConfigDrop.close();">+ Create New</div>
+								<div class="create-new" (click)="openModalPopup('default');selectSearchConfigDrop.close();">+ Create New</div>
 							</ul>
 						</div>
 					</div>				
@@ -266,7 +266,7 @@
 
 <kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addFieldModalPop>   
     <div class="modal-header">
-        <div class="title">New Search Configuration</div>
+        <div class="title">{{newConfigObj.method==='default'?'New':'Clone'}} Search Configuration</div>
         <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
@@ -280,48 +280,33 @@
 				<input id="cloneQueryConfig" [(ngModel)]="newConfigObj.method" (change)='selectDefault()' name="creationType" value='clone' class="radio-custom" type="radio">
 				<label for="cloneQueryConfig" class="radio-custom-label">Clone Configuration</label>
 			</div>
-			<div class="kr-sg-input-text pt-4">
-				<div class="label-text" >Name of Configuration</div>
-				<input type="text" placeholder="Enter Name" [(ngModel)]="newConfigObj.name" class="input-text">
-			</div>
 		</div>
 		<ng-container *ngIf="newConfigObj.method === 'clone'">
 			<div class="kr-sg-dropdowns mb-2 pb-1 pt-4">
-				<div class="label-text">Select the configuration you would like to clone</div>                            
-				<div class="kr-sg-input-inline-search dropdown dropdown-open">
-					<button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-					<input type="text" placeholder="Search" class="input-search dropdown-toggle dropdown-input" [(ngModel)]="searchPipeline" data-toggle="dropdown">
-					<img src="assets/icons/search_gray.svg" class="search-icon">                                                           
-					<!-- <ul class="dropdown-menu content-menu">
-						<perfect-scrollbar class="state-code-perfect-scroll" [disabled]="workflowService.disablePerfectScroll">
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-						</perfect-scrollbar>
-					</ul> -->
-				</div>                        
-			</div>
-	
-			<div class="group-radiobutton in-clone">			
-				<div class="kr-sg-radiobutton d-block m-0" *ngFor="let config of queryConfigs | filter: [ searchPipeline, 'name']; let i = index">
-					<input id="{{config._id}}" [(ngModel)]="newConfigObj._id" value="{{config._id}}" name="cloneConfig" class="radio-custom" type="radio">
-					<label for="{{config._id}}" class="radio-custom-label">{{config.name}}</label>
-				</div> 
-				<div class="divBlockEmptylastChild">{{!(queryConfigs && queryConfigs.length)?'No Data Found': 'No search results'}}</div>
-			</div>
-		</ng-container> 	
+				<div class="label-text">Search Configuration</div>
+				<div class="dropdown dropdown-open">
+					<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newConfigObj.config_name===''?'Select Search Configuration to be cloned':newConfigObj.config_name}}</button>                                            
+					<ul class="dropdown-menu content-menu">
+					  <li *ngFor="let config of queryConfigs" (click)="selectConfig(config)"><a>{{config.name}}</a></li>                                              
+					</ul>
+				  </div>                   
+			</div> 
+		</ng-container> 
+		<div class="kr-sg-input-text pt-3">
+			<div class="label-text">{{newConfigObj.method==='clone'?'Search Configuration Name':'Configuration Name'}}</div>
+			<input type="text" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
+		</div>	
     </div>
     </perfect-scrollbar> 
     <div class="modal-footer text-left">
-        <button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">Add</button>                   
+        <button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">{{newConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
     </div>    
 </kr-modal>
-
+<!--index config popup-->
 <kr-modal modalType="center" modalClass="modal_popups_ add-experment-popup smallModal"  #addIndexFieldModalPop>   
     <div class="modal-header">
-        <div class="title">New Index Configuration</div>
+        <div class="title">{{newIndexConfigObj.method==='default'?'New':'Clone'}} Index Configuration</div>
         <div class="close_icon" (click)="closeIndexModalPopup()"><img src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
@@ -335,41 +320,26 @@
 				<input id="cloneQueryConfig" [(ngModel)]="newIndexConfigObj.method" (change)='selectDefault()' name="creationType" value='clone' class="radio-custom" type="radio">
 				<label for="cloneQueryConfig" class="radio-custom-label">Clone Configuration</label>
 			</div>
-			<div class="kr-sg-input-text pt-4">
-				<div class="label-text" >Name of Configuration</div>
-				<input type="text" placeholder="Enter Name" [(ngModel)]="newIndexConfigObj.name" class="input-text">
-			</div>
 		</div>
 		<ng-container *ngIf="newIndexConfigObj.method === 'clone'">
 			<div class="kr-sg-dropdowns mb-2 pb-1 pt-4">
-				<div class="label-text">Select the configuration you would like to clone</div>                            
-				<div class="kr-sg-input-inline-search dropdown dropdown-open">
-					<button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-					<input type="text" placeholder="Search" class="input-search dropdown-toggle dropdown-input" [(ngModel)]="searchPipeline" data-toggle="dropdown">
-					<img src="assets/icons/search_gray.svg" class="search-icon">                                                           
-					<!-- <ul class="dropdown-menu content-menu">
-						<perfect-scrollbar class="state-code-perfect-scroll" [disabled]="workflowService.disablePerfectScroll">
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-							<li><a>Option1</a></li>
-						</perfect-scrollbar>
-					</ul> -->
-				</div>                        
+				<div class="label-text">Index Configuration</div>                            
+				<div class="dropdown dropdown-open">
+					<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newIndexConfigObj.index_config_name===''?'Select Index Configuration to be cloned':newIndexConfigObj.index_config_name}}</button>                                            
+					<ul class="dropdown-menu content-menu">
+					  <li *ngFor="let config of indexConfigs" (click)="selectIndexConfig(config)"><a>{{config.name}}</a></li>                                              
+					</ul>
+				  </div>                               
 			</div>
-	
-			<div class="group-radiobutton in-clone">			
-				<div class="kr-sg-radiobutton d-block m-0" *ngFor="let config of indexConfigs | filter: [ searchPipeline, 'name']; let i = index">
-					<input id="{{config._id}}" [(ngModel)]="newIndexConfigObj._id" value="{{config._id}}" name="cloneConfig" class="radio-custom" type="radio">
-					<label for="{{config._id}}" class="radio-custom-label">{{config.name}}</label>
-				</div> 
-				<div class="divBlockEmptylastChild">{{!(indexConfigs && indexConfigs.length)?'No Data Found': 'No search results'}}</div>
-			</div>
-		</ng-container> 	
+		</ng-container> 
+		<div class="kr-sg-input-text pt-4">
+			<div class="label-text">{{newIndexConfigObj.method==='clone'?'Index Configuration Name':'Name of Index Configuration'}}</div>
+			<input type="text" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
+		</div>	
     </div>
     </perfect-scrollbar> 
     <div class="modal-footer text-left">
-        <button type="button" [disabled]="!newIndexConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">Add</button>                   
+        <button type="button" [disabled]="!newIndexConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">{{newIndexConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeIndexModalPopup()">Cancel</button>
     </div>    
 </kr-modal>
