--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -174,9 +174,11 @@
 
 .table_section {
     padding: 0 30px;
+    margin-top: 27px;
     .header_sec {
         align-items: center;
-        padding: 15px 0;
+        padding: 16px 0;
+        height: 50px;
         border-bottom: 1px solid #e4e5e7;
         .content {
             color: #9aa0a6;
@@ -207,11 +209,12 @@
         }
     }
     .scroll_table {
-        height: calc(100vh - 265px);
+        height: calc(100vh - 198px);
     }
     .body_sec {
         align-items: center;
-        padding: 16px 0px;
+        padding: 13px 0px;
+        min-height: 50px;
         // border-bottom: 1px solid #E4E5E7;
         cursor: pointer;
         transition: 0.3s all ease;
