--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -81,7 +81,7 @@
                     </div>
                 </li>
                 <li class="nav-item test-button">
-                    <button class="kr-sg-button-secondary btn_lg" (click)="openOrCloseSearchSDK()">Test</button>
+                    <button class="kr-sg-button-secondary btn_lg rr-tour-test-btn" (click)="openOrCloseSearchSDK()">Test</button>
                 </li>
                 <li class="nav-item test-button">
                     <img src="assets/icons/sidemenu/new-icons/actions.svg" class="defaultIcon" (click)="train()">
