search experience color pallet styles updated

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -145,6 +145,12 @@
                                         readonly
                                     />
                                     <div class="box-color-content" *ngIf="inputBox1">
+                                        <div class="header-title-close">
+                                            <div class="title-name">Choose Color</div>
+                                            <div class="close-color">
+                                                <img src="assets/icons/close.svg">
+                                            </div>
+                                        </div>
                                         <div class="selected-previous-colors flex-wrap">
                                             <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputbox1', col);color=col;"></div>
@@ -168,6 +174,12 @@
                                     />
 
                                     <div class="box-color-content" *ngIf="inputBox2">
+                                        <div class="header-title-close">
+                                            <div class="title-name">Choose Color</div>
+                                            <div class="close-color">
+                                                <img src="assets/icons/close.svg">
+                                            </div>
+                                        </div>
                                         <div class="selected-previous-colors">
                                            <div class="bg-color-selected"></div>
                                            <div class="bg-color-selected"></div>
@@ -201,6 +213,12 @@
                                     />
 
                                     <div class="box-color-content" *ngIf="placeholBox">
+                                        <div class="header-title-close">
+                                            <div class="title-name">Choose Color</div>
+                                            <div class="close-color">
+                                                <img src="assets/icons/close.svg">
+                                            </div>
+                                        </div>
                                         <div class="selected-previous-colors">
                                            <div class="bg-color-selected"></div>
                                            <div class="bg-color-selected"></div>
@@ -238,6 +256,12 @@
                                         />
     
                                         <div class="box-color-content" *ngIf="buttonTextColor">
+                                            <div class="header-title-close">
+                                                <div class="title-name">Choose Color</div>
+                                                <div class="close-color">
+                                                    <img src="assets/icons/close.svg">
+                                                </div>
+                                            </div>
                                             <div class="selected-previous-colors">
                                                <div class="bg-color-selected"></div>
                                                <div class="bg-color-selected"></div>
@@ -263,6 +287,12 @@
                                         />
     
                                         <div class="box-color-content" *ngIf="buttonFill">
+                                            <div class="header-title-close">
+                                                <div class="title-name">Choose Color</div>
+                                                <div class="close-color">
+                                                    <img src="assets/icons/close.svg">
+                                                </div>
+                                            </div>
                                             <div class="selected-previous-colors">
                                                <div class="bg-color-selected"></div>
                                                <div class="bg-color-selected"></div>
@@ -289,6 +319,12 @@
                                         />
     
                                         <div class="box-color-content" *ngIf="buttonBorder">
+                                            <div class="header-title-close">
+                                                <div class="title-name">Choose Color</div>
+                                                <div class="close-color">
+                                                    <img src="assets/icons/close.svg">
+                                                </div>
+                                            </div>
                                             <div class="selected-previous-colors">
                                                <div class="bg-color-selected"></div>
                                                <div class="bg-color-selected"></div>
@@ -330,6 +366,12 @@
                                             />
 
                                             <div class="box-color-content" *ngIf="msgColor">
+                                                <div class="header-title-close">
+                                                    <div class="title-name">Choose Color</div>
+                                                    <div class="close-color">
+                                                        <img src="assets/icons/close.svg">
+                                                    </div>
+                                                </div>
                                                 <div class="selected-previous-colors">
                                                 <div class="bg-color-selected"></div>
                                                 <div class="bg-color-selected"></div>
