--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -370,7 +370,7 @@
                                 border: 0 !important;
                                 padding: 0;
                                 height: 100%;
-                                border-radius: 0;
+                                border-radius: 4px;
                                 cursor: pointer;
                             }
                         }
@@ -461,7 +461,7 @@
                         box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
                         border-radius: 8px;
                         width: 542px;
-                        height: 320px;
+                        height: 360px;
                         top: -75px;
                         padding: 5px 5px 10px 10px;
                         &::before{
@@ -475,6 +475,22 @@
                             height: 24px;
                             transform: rotate(45deg);
                             z-index: -1;
+                        }
+                        .header-title-close{
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            border-bottom: 1px solid #EFF0F1;
+                            margin: 0 -5px 0 -10px;
+                            padding: 0px 20px 8px 20px;
+                            .title-name{
+                                font-weight: 500;
+                                font-size: 14px;
+                                line-height: 20px;
+                            }
+                            .close-color{
+                                cursor: pointer;
+                            }
                         }
                         .color-picker{
                             margin-top: -15px;
@@ -569,7 +585,7 @@
                                             border: 0 !important;
                                             padding: 0;
                                             height: 100%;
-                                            border-radius: 0;
+                                            border-radius: 0px;
                                             cursor: pointer;
                                         }
                                     }
@@ -586,7 +602,7 @@
                                     box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
                                     border-radius: 8px;
                                     width: 542px;
-                                    height: 320px;
+                                    height: 360px;
                                     top: 40px;
                                     padding: 5px 5px 10px 10px;
                                     z-index: 9;
@@ -601,6 +617,22 @@
                                         height: 24px;
                                         transform: rotate(45deg);
                                         z-index: -1;
+                                    }
+                                    .header-title-close{
+                                        display: flex;
+                                        align-items: center;
+                                        justify-content: space-between;
+                                        border-bottom: 1px solid #EFF0F1;
+                                        margin: 0 -5px 0 -10px;
+                                        padding: 0px 20px 8px 20px;
+                                        .title-name{
+                                            font-weight: 500;
+                                            font-size: 14px;
+                                            line-height: 20px;
+                                        }
+                                        .close-color{
+                                            cursor: pointer;
+                                        }
                                     }
                                     .color-picker{
                                         margin-top: -15px;
