result Rank tour

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -227,7 +227,7 @@
                         <label for="radio-33" class="radio-custom-label">Postback</label>
                     </div> 
                   </div>   -->
-                  <div class="kr-sg-input-text  customize-right " style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable" [ngClass]="{'disable-url': !customizeTemplateObj.template.searchResultlayout.clickable }">
+                  <div class="kr-sg-input-text  customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable" [ngClass]="{'disable-url': !customizeTemplateObj.template.searchResultlayout.clickable }">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">URL</div>
                       <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
@@ -279,7 +279,7 @@
                         <label for="radio-33" class="radio-custom-label">Postback</label>
                     </div> 
                   </div>   -->
-                  <div class="kr-sg-input-text customize-right " style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
+                  <div class="kr-sg-input-text customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">URL</div>
                       <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
@@ -331,7 +331,7 @@
                         <label for="radio-33" class="radio-custom-label">Postback</label>
                     </div> 
                   </div>   -->
-                  <div class="kr-sg-input-text customize-right " style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
+                  <div class="kr-sg-input-text customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">URL</div>
                       <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
@@ -377,7 +377,7 @@
                         <label for="radio-33" class="radio-custom-label">Postback</label>
                     </div> 
                   </div>   -->
-                  <div class="kr-sg-input-text  customize-right " style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
+                  <div class="kr-sg-input-text  customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">URL</div>
                       <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
