--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2584,6 +2584,7 @@ nouislider{
                             }
                             .content-sec{
                                 max-width: 332px;
+                                word-break: break-word;
                             }
                         }
                     }
