--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13410,3 +13410,14 @@ button.search-button:disabled {
     width: 100%;
     overflow: initial;
 }
+
+.kore-search-container-close-icon{
+    cursor: pointer;
+}
+
+.live-search-close-icon{
+    top: 12px;
+    position: absolute;
+    right: 20px;
+    cursor: pointer;
+}
