--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1170,6 +1170,7 @@ input:focus{
 
   .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details{
     width: 100%;
+    position: relative;
   }
 
   .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details .tab-sec{
