--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -9867,6 +9867,10 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
 .custom-header-container-left.searchAssist{
     display: block;
 }
+
+.search-container.conversation.no-history .custom-header-container-left.searchAssist{
+    display: none;
+}
 .custom-chevron-icon {
     width: 7px;
     height: 10px;
