--- a/findly-builder/src/app/app.component.html
+++ b/findly-builder/src/app/app.component.html
@@ -5,7 +5,7 @@
         <app-mainmenu [show]="showMainMenu" [settingMainMenu]="settingMainMenu" class="toShowAppHeader"></app-mainmenu>
         <app-body (initSearchSDK)="initSearchSDK()" (closeResultBody)="closeResultBody($event)" [query]="queryText"
             [bridgeData]="bridgeDataInsights" [showInsightFull]="showInsightFull" [addNewResult]="addNewResult"
-            class="container-fluid appContent" [ngClass]="{'pl-0': !showMainMenu}"></app-body>
+            class="container-fluid appContent" [ngClass]="{'pl-0': !showMainMenu}" [structure]="structure"></app-body>
     </div>
 </div>
 <div class="loaderContainer" *ngIf="loading">
